# Product-Approval-AI

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/api/: __init__.py  routes.py
app/services/: prompts.py  review_service.py
tests/: conftest.py  test_api.py  test_review_service.py
